--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -1,116 +1,5 @@
-aniso8601==9.0.1
-anyio==3.3.0
-appnope==0.1.2
-argon2-cffi==20.1.0
-attrs==21.2.0
-aws-encryption-sdk==3.1.1
-awscli==1.25.20
-awslambdaric==1.2.2
-backcall==0.2.0
-bleach==4.0.0
 boto3==1.18.24
-botocore==1.21.65
-cached-property==1.5.2
-certifi==2021.5.30
-cffi==1.14.6
-chardet==4.0.0
-charset-normalizer==2.0.4
-click==8.1.3
-colorama==0.4.3
-configparser==5.0.2
-crayons==0.4.0
-crypto==1.4.1
-cryptography==37.0.4
-cycler==0.10.0
-debugpy==1.4.1
-decorator==5.0.9
-defusedxml==0.7.1
-docutils==0.15.2
-entrypoints==0.3
-fields==5.0.0
-Flask==2.1.2
-flask-restplus==0.13.0
-flask-restx==0.5.1
-idna==3.2
-importlib-metadata==4.11.4
-ipykernel==6.2.0
-ipython==7.26.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-itsdangerous==2.1.2
-jedi==0.18.0
-Jinja2==3.0.1
-jmespath==0.10.0
-joblib==1.0.1
-jsonpickle==2.0.0
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.12
-jupyter-console==6.4.0
-jupyter-core==4.7.1
-jupyter-server==1.10.2
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-kiwisolver==1.3.2
-MarkupSafe==2.0.1
+flask_restx==0.5.1
 matplotlib==3.4.3
-matplotlib-inline==0.1.2
-mistune==0.8.4
-more-itertools==8.9.0
-music21==7.1.0
-Naked==0.1.31
-nbclient==0.5.4
-nbconvert==5.6.1
-nbformat==5.1.3
-nest-asyncio==1.5.1
-notebook==6.4.3
-numpy==1.21.2
-packaging==21.0
-pandocfilters==1.4.3
-parso==0.8.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.3.2
-prometheus-client==0.11.0
-prompt-toolkit==3.0.19
-protobuf==3.19.4
-ptyprocess==0.7.0
-pyasn1==0.4.8
-pycparser==2.20
-pycryptodome==3.9.0
-Pygments==2.10.0
-pyparsing==2.4.7
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-pytz==2022.1
-PyYAML==5.4.1
-pyzmq==22.2.1
-qtconsole==5.1.1
-QtPy==1.10.0
-requests==2.26.0
-requests-unixsocket==0.2.0
-rsa==4.7.2
-s3transfer==0.5.2
-selenium==3.141.0
-Send2Trash==1.8.0
-shellescape==3.8.1
-simplejson==3.17.2
-six==1.16.0
-sniffio==1.2.0
-terminado==0.11.0
-testpath==0.5.0
-tornado==6.1
-traitlets==5.0.5
-urllib3==1.26.6
-voila==0.2.10
-voila-gridstack==0.2.0
-wcwidth==0.2.5
-webcolors==1.11.1
-webdriver-manager==3.4.2
-webencodings==0.5.1
-websocket-client==1.2.1
-Werkzeug==2.1.2
-widgetsnbextension==3.5.1
-wrapt==1.14.1
-xmlformatter==0.2.4
-zipp==3.8.0
+pycryptodome==3.15.0
+PyYAML==6.0
